Read-only views

--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -7,7 +7,7 @@ block content
         a.link-back(href="javascript: window.history.back();") Back
 
     div.largePaddingBottom
-        if licence.licenceConditions && licence.licenceConditions.length > 0
+        if data.licenceConditions && data.licenceConditions.length > 0
             h2.heading-medium Additional conditions
             p The additional conditions you have selected are displayed below. You can add more or continue.
             div.borderBottomLight
