--- a/server/views/licenceDetails/additionalConditions.pug
+++ b/server/views/licenceDetails/additionalConditions.pug
@@ -1,6 +1,6 @@
 mixin additionalConditions(editable)
     - var allowEdit = (editable === 'editable')
-    - var conditions = licence.licenceConditions
+    - var conditions = data.licenceConditions
 
     for condition, index in conditions
         div.pure-g.borderBottomLight.midPaddingTopBottom
