--- a/server/views/licenceDetails/curfewHours.pug
+++ b/server/views/licenceDetails/curfewHours.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottomLightThick.separatorTitle Proposed HDC curfew hours
 
--var hours = licence.curfew.curfewHours
+-var hours = data.curfew.curfewHours
 
 div.pure-g.midPaddingTopBottom
     div.pure-u-5-6.smallPaddingBottom
