--- a/server/views/licenceDetails/reportingInstructions.pug
+++ b/server/views/licenceDetails/reportingInstructions.pug
@@ -1,6 +1,6 @@
 h2.heading-medium.borderBottomLightThick.separatorTitle Reporting instructions
 
--var reportingInstructions = licence.reporting.reportingInstructions
+-var reportingInstructions = data.reporting.reportingInstructions
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
