--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -15,7 +15,7 @@ block content
             h2.heading-large Proposed address decision
 
             if address
-                p The following address have been requested by the offender.
+                p The following address has been requested by the offender.
 
                 +addressDetail('preferred', address, review)
 
