--- a/server/views/licenceDetails/licenceDetails.pug
+++ b/server/views/licenceDetails/licenceDetails.pug
@@ -9,20 +9,20 @@ block content
 
         include ../taskList/prisonerDetails
 
-        if licence.proposedAddress && licence.proposedAddress.curfewAddress && licence.proposedAddress.curfewAddress.preferred
+        if data.proposedAddress && data.proposedAddress.curfewAddress && data.proposedAddress.curfewAddress.preferred
             include curfewAddress
 
-        if licence.curfew && licence.curfew.curfewHours
+        if data.curfew && data.curfew.curfewHours
             include curfewHours
 
-        if licence.licenceConditions && licence.licenceConditions.length > 0
+        if data.licenceConditions && data.licenceConditions.length > 0
             h2.heading-medium.borderBottomLight Additional conditions
             +additionalConditions()
 
-        if licence.risk && licence.risk.riskManagement
+        if data.risk && data.risk.riskManagement
             include ./riskManagement
 
-        if licence.reporting && licence.reporting.reportingInstructions
+        if data.reporting && data.reporting.reportingInstructions
             include ./reportingInstructions
 
     div.paddingBottom.smallPaddingTop
