--- a/server/views/taskList/taskList.pug
+++ b/server/views/taskList/taskList.pug
@@ -30,7 +30,6 @@ block content
                 include postponementTask
                 include caSubmitTask
 
-
         if user.role === 'RO'
             include curfewAddressTask
             include additionalConditionsTask
@@ -43,4 +42,5 @@ block content
             include additionalConditionsTask
             include riskManagementTask
             include reportingInstructionsTask
+            include finalChecksTask
             include approvalTask
