--- a/server/views/taskList/approvalTask.pug
+++ b/server/views/taskList/approvalTask.pug
@@ -5,10 +5,9 @@ div.largeMarginBottom.borderTop
 
     div.pure-g
         div.pure-u-3-4
-                | #{statusLabel}
+            | #{statusLabel}
         div.pure-u-1-4
-            if licenceStatus.stage === 'APPROVAL'
-                a.taskListAction.center.button(href="/hdc/approval/" + prisonerInfo.offenderNo)
-                    | Continue
+            +proceed(licenceStatus.tasks.reportingInstructions, 'UNSTARTED', 'Continue', 'View', "/hdc/approval/release/" + prisonerInfo.offenderNo)
+
 
 
