Fix approval button state

--- a/server/views/taskList/approvalTask.pug
+++ b/server/views/taskList/approvalTask.pug
@@ -7,7 +7,7 @@ div.largeMarginBottom.borderTop
         div.pure-u-3-4
             | #{statusLabel}
         div.pure-u-1-4
-            +proceed(licenceStatus.tasks.reportingInstructions, 'UNSTARTED', 'Continue', 'View', "/hdc/approval/release/" + prisonerInfo.offenderNo)
+            +proceed(licenceStatus.tasks.approval, 'UNSTARTED', 'Continue', 'View', "/hdc/approval/release/" + prisonerInfo.offenderNo)
 
 
 
