--- a/server/views/review/reporting.pug
+++ b/server/views/review/reporting.pug
@@ -3,7 +3,7 @@ include ../licenceDetails/additionalConditions
 
 block content
 
-    - var reporting = data.reporting.reportingInstructions || {}
+    - var reporting = data.reporting && data.reporting.reportingInstructions ? data.reporting.reportingInstructions : {}
 
     div.back-link-container.smallPaddingTop
         a.link-back(href="javascript: window.history.back();") Back
