--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -3,7 +3,7 @@ include ../licenceDetails/additionalConditions
 
 block content
 
-    - var risk = data.risk.riskManagement || {}
+    - var risk = data.risk && data.risk.riskManagement ? data.risk.riskManagement : {}
 
     div.back-link-container.smallPaddingTop
         a.link-back(href="javascript: window.history.back();") Back
