--- a/server/views/taskList/proposedAddressTask.pug
+++ b/server/views/taskList/proposedAddressTask.pug
@@ -15,14 +15,7 @@ if licenceStatus.tasks.exclusion == 'DONE' && licenceStatus.decisions.eligible
                     | Information not yet submitted
 
             div.pure-u-1-4.center
-                if licenceStatus.stage !== 'ELIGIBILITY'
-                    a.taskListAction.center.button.button-secondary(href="/hdc/proposedAddress/optOut/"+prisonerInfo.offenderNo)
-                        | View
-                else
-                    a.taskListAction.center.button(href="/hdc/proposedAddress/optOut/"+prisonerInfo.offenderNo)
-                        if licenceStatus.tasks.curfewAddress === 'UNSTARTED'
-                            | Start
-                        else
-                            | Continue
+                +proceed(licenceStatus.tasks.curfewAddress, 'UNSTARTED', 'Start', 'Continue', "/hdc/proposedAddress/optOut/" + prisonerInfo.offenderNo)
+
 
 
