Enable submit buttons regardless of task status

--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -14,6 +14,7 @@ div.largeMarginBottom.borderTop
                 | #{statusLabel}
         div.pure-u-1-4
             if licenceStatus.stage === 'PROCESSING_RO'
+                //- && allowedTransitions.roToCa
                 a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
 
