--- a/server/views/taskList/caSubmitTask.pug
+++ b/server/views/taskList/caSubmitTask.pug
@@ -15,7 +15,8 @@ div.largeMarginBottom.borderTop
             else
                 | #{statusLabel}
         div.pure-u-1-4
-            if licenceStatus.stage === 'PROCESSING_CA' && allowedTransitions.caToDm
+            if licenceStatus.stage === 'PROCESSING_CA'
+                //- && allowedTransitions.caToDm
                 a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
                     | Continue
 
