Make address views consistent

--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -7,7 +7,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         span Address
     div.pure-u-1-2
         div.pure-g
-            div.pure-u-1-2#dischargeAddress
+            div.pure-u-1-2#addressDetails
                 if address.addressLine1
                     span#address1.block.bold #{address.addressLine1}
                 if address.addressLine2
