--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -7,35 +7,35 @@ mixin addressForm(type)
             div.pure-g
                 div.pure-u-1.pure-u-md-3-5
                     div.form-group.midMarginBottom
-                        label.form-label(for=type+"-addressLine1") Building and street
-                        input.form-control(id=type+"-addressLine1" name=type+"[addressLine1]" value=thisAddress.addressLine1)
-                        input.form-control.smallMarginTop(id=type+"-addressLine2" name=type+"[addressLine2]" value=thisAddress.addressLine2)
+                        label.form-label(for=type+"address1") Building and street
+                        input.form-control(id=type+"address1" name=type+"[addressLine1]" value=thisAddress.addressLine1)
+                        input.form-control.smallMarginTop(id=type+"address2" name=type+"[addressLine2]" value=thisAddress.addressLine2)
 
                     div.form-group.midMarginBottom
-                        label.form-label(for=type+"-addressTown") Town or city
-                        input.form-control(id=type+"-addressTown" name=type+"[addressTown]" value=thisAddress.addressTown)
+                        label.form-label(for=type+"town") Town or city
+                        input.form-control(id=type+"town" name=type+"[addressTown]" value=thisAddress.addressTown)
 
                     div.form-group.midMarginBottom.pure-u-sm-1.pure-u-md-1-2
-                        label.form-label(for=type+"-postCode") Postcode
-                        input.form-control(id=type+"-postCode" name=type+"[postCode]" value=thisAddress.postCode)
+                        label.form-label(for=type+"postCode") Postcode
+                        input.form-control(id=type+"postCode" name=type+"[postCode]" value=thisAddress.postCode)
 
                     div.form-group.pure-u-sm-1.pure-u-md-3-4
-                        label.form-label(for=type+"-telephone") Telephone
-                        input.form-control(id=type+"-telephone" name=type+"[telephone]" value=thisAddress.telephone)
+                        label.form-label(for=type+"telephone") Telephone
+                        input.form-control(id=type+"telephone" name=type+"[telephone]" value=thisAddress.telephone)
 
         div.pure-u-1.pure-u-md-1-2
             div.pure-g
                 div.form-group.pure-u-1.pure-u-sm-10-24
-                    label.form-label(for=type+"-occupierName") Name of main occupier
-                    input.form-control(id=type+"-occupierName" name=type+"[occupier][name]" value=savedOccupier.name)
+                    label.form-label(for=type+"occupierName") Name of main occupier
+                    input.form-control(id=type+"occupierName" name=type+"[occupier][name]" value=savedOccupier.name)
 
                 div.form-group.pure-u-1.pure-u-sm-10-24.padLeftRight15
-                    label.form-label(for=type+"-occupierRelationship") Relation to prisoner
-                    input.form-control(id=type+"-occupierRelationship" name=type+"[occupier][relationship]" value=savedOccupier.relationship)
+                    label.form-label(for=type+"occupierRelation") Relation to prisoner
+                    input.form-control(id=type+"occupierRelation" name=type+"[occupier][relationship]" value=savedOccupier.relationship)
 
                 div.form-group.pure-u-1.pure-u-sm-4-24
-                    label.form-label(for=type + "-occupierAge") Age
-                    input.form-control(id=type + "-occupierAge" name=type + "[occupier][age]" value=savedOccupier.age)
+                    label.form-label(for=type + "occupierAge") Age
+                    input.form-control(id=type + "occupierAge" name=type + "[occupier][age]" value=savedOccupier.age)
 
             +otherResidents(type, thisAddress)
 
