--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -16,7 +16,7 @@ block content
             if address
                 p The following discharge address have been requested by the offender.
 
-                +addressDetail('preferred', address)
+                +addressDetail('', address)
 
         h3.heading-medium Address check confirmation
 
