IDs for feature specs

--- a/server/views/review/conditions.pug
+++ b/server/views/review/conditions.pug
@@ -14,6 +14,6 @@ block content
             +additionalConditions()
 
         else
-            h2.heading-medium No additional conditions have been selected.
+            h2#message.heading-medium No additional conditions have been selected.
 
         include ../includes/returnButton
