Final checks alert styling

--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -18,7 +18,7 @@ block content
                 p Are there any risk management planning actions that must take place prior to release?
 
                 span#planningActions.block.bold #{risk.planningActions}
-                span#planningActionsDetails.block #{risk.planningActionsDetails}
+                span#planningActionsDetails.block.largePaddingBottom #{risk.planningActionsDetails}
 
             div.smallPaddingTop
                 p Are you still awaiting information?
