Change postpone to a toggle button

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -13,7 +13,7 @@ $path: "/public/images/";
     min-height: 65vh;
 }
 
-a.button.button-secondary {
+.button.button-secondary {
     color: $black;
     background-color: $grey-3;
     min-width: 120px;
