--- a/server/views/caseList/ROTable.pug
+++ b/server/views/caseList/ROTable.pug
@@ -39,9 +39,10 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             | #{prisoner.status}
 
                     td
-                        if prisoner.status === 'Awaiting assessment'
-                            a.button.button-primary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
-                                | Start
-                        else
-                            a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
-                                | View
+                        if ['PROCESSING_RO'].includes(prisoner.stage)
+                            if ['Awaiting assessment'].includes(prisoner.status)
+                                a.button.button-primary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
+                                    | Start
+                            else
+                                a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
+                                    | View
